--- a/sass/base/elements/_buttons.scss
+++ b/sass/base/elements/_buttons.scss
@@ -25,5 +25,26 @@ input[type="submit"] {
 	padding: 20px;
 	text-transform: uppercase;
 	background-color: $color__primary-blue;
-	color: #fff ;
+	color: #fff;
+}
+
+
+.btn-reserve-now {
+	text-transform: uppercase;
+	color: #fff;
+	background-color: $color__primary-blue;
+	box-shadow: inset 0 0 0 0 #fff;
+	transition: 150ms;
+	outline: none;
+	width: 150px;
+	height: 60px;
+	cursor: pointer;
+	border: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	&:hover {
+		box-shadow: inset 150px 0 0 0 #fff;
+		color: $color__primary-blue !important;
+	}
 }
