--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -109,6 +109,26 @@
 	}
 }
 
+#burger-menu {
+	width: 70px;
+	height: 60px;
+	background-color: $color__primary-blue;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	box-shadow: inset 0 0 0 0 #fff;
+	cursor: pointer;
+	transition: ease-in-out 150ms;
+	&:hover {
+		box-shadow: inset 70px 0 0 0 #fff;
+		// svg {
+			line {
+				stroke: $color__primary-blue !important;
+			}
+		// }
+	}
+}
+
 #burger-menu-close {
 	transform: translateY(-1300px);
 	opacity: 0;
