--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,3 +1,11 @@
+/* Media Queries Vars
+--------------------------------------------- */
+$mobile-min: 320px;
+$mobile-max: 480px;
+$tablet-min: 550px;
+$tablet-medium: 767px;
+$tablet-max: 1024px;
+
 /* Typography
 --------------------------------------------- */
 @import "typography/typography";
@@ -28,12 +36,16 @@
 @import "pages/location";
 @import "pages/contact";
 
+
 .page-header-image {
     width: 100%;
     height: 700px;
+	@media (min-width:$mobile-min) and (max-width: $mobile-max) {
+		height: 80vh; 
+	}
     img {
         width: 100%;
-        height: 700px;
+        height: 100%;
         object-fit: cover;
     }
 }
@@ -50,7 +62,9 @@
     position: relative;
     z-index: 1;
     margin: 200px 0;
-
+	@media (min-width:$mobile-min) and (max-width: $mobile-max) {
+		margin: 80px 0;  
+	}
     .title-wrapper {
         text-align: center;
     }
@@ -59,12 +73,18 @@
         display: grid;
         grid-template-columns: 40% 100%;
         align-items: center;
-        @media (min-width: 320px) and (max-width: 480px) {
+        @media (min-width:$mobile-min) and (max-width: $mobile-max) {
+            grid-template-columns: 1fr;   
+        }
+        @media (min-width:$tablet-min) and (max-width: $tablet-medium) {
             grid-template-columns: 1fr;   
         }
         & > div {
             overflow: hidden;
             height: 720px;
+			@media (min-width:$mobile-min) and (max-width: $mobile-max) {
+				height: 80vh;
+			}
         }
     }
 
@@ -75,13 +95,10 @@
         .swiper-pagination-bullets {
             position: absolute;
             top: 90%;
-            left: 48%;
+			width: 100%;
+			text-align: center;
+            left: 0;
             z-index: 3;
-            @media (min-width: 320px) and (max-width: 480px) {
-                width: 100%;
-                left: 0;
-                text-align: center;
-            }
            .swiper-pagination-bullet {
                background: #fff;
            }
@@ -100,11 +117,16 @@
         position: absolute;
         top: -15px;
         left: 37%;
-        @media (min-width: 320px) and (max-width: 480px) {
+        @media (min-width:$mobile-min) and (max-width: $mobile-max) {
             left: 50%;
             top: -65px;
             margin: 0;
             transform: translateX(-50%);
+        }
+        @media (min-width:$tablet-min) and (max-width: $tablet-max) {
+			top: -90px;
+			left: 50%;
+			transform: translateX(-50%);
         }
     }
 
@@ -114,10 +136,15 @@
         left: 42%;
         transform: translateX(-50%);
         z-index: 2;
-        @media (min-width: 320px) and (max-width: 480px) {
+        @media (min-width:$mobile-min) and (max-width: $mobile-max) {
             top: -45px;
             left: 50%;
             width: 100%;
+        }
+        @media (min-width:$tablet-min) and (max-width: $tablet-max) {
+			top: -50px;
+			left: 50%;
+			transform: translateX(-50%);
         }
     }
 
@@ -136,6 +163,12 @@
     }
 }
 
+#location {
+	@media (min-width:$mobile-min) and (max-width: $mobile-max) {
+		margin: 100px 0;
+	}
+}
+
 .tabs {
     display: flex;
     flex-direction: column;
@@ -143,9 +176,12 @@
     margin-left: 30px;
     overflow: initial !important;
     height: 100% !important;
-    @media (min-width: 320px) and (max-width: 480px) {
+    @media (min-width:$mobile-min) and (max-width: $mobile-max) {
         margin: 20px;
     }
+	@media (min-width: $tablet-min) and (max-width: $tablet-max) {
+		margin: 20px; 
+	}
     h3 {
         display: flex;
         align-items: center;
@@ -154,6 +190,7 @@
         font-size: 20px;
         img {
             margin-right: 5px;
+			transition: 250ms;
         }
     }
 
@@ -169,7 +206,7 @@
         margin-left: -100px;
         padding: 25px;
         font-size: 16px;
-        @media (min-width: 320px) and (max-width: 480px) {
+        @media (min-width:$mobile-min) and (max-width: $tablet-medium) {
             width: 100%;
             margin: 0;
         }
@@ -180,14 +217,17 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
-    @media (min-width: 320px) and (max-width: 480px) {
+    @media (min-width:$mobile-min) and (max-width: $mobile-max) {
         grid-template-columns: 1fr;             
     }
+	@media ( min-width: $tablet-min ) and (max-width: $tablet-medium) {
+		grid-template-columns: 1fr;
+	}
 }
 
 section {
     position: relative;
-    @media (min-width: 320px) and (max-width: 480px) {
+    @media (min-width:$mobile-min) and (max-width: $mobile-max) {
         max-width: 100%;           
     }
 }
@@ -198,7 +238,7 @@ section {
     text-transform: uppercase;
     position: relative;
     z-index: 2;
-    @media (min-width: 320px) and (max-width: 480px) {
+    @media (min-width:$mobile-min) and (max-width: $mobile-max) {
         font-size: 50px;  
         margin: 0 20px;      
     }
@@ -248,3 +288,53 @@ section {
     }
 }
 
+
+.caravella-page-slider-wrapper {
+	@media (min-width:$mobile-min) and (max-width: $mobile-max) {
+        height: 80vh;
+		overflow: hidden;
+		.swiper-container {
+			height: 100%;
+
+		}
+
+		img {
+			height: 100%;
+		}
+    }
+
+	@media (min-width:$tablet-min) and (max-width: $tablet-max) {
+        height: 50vh;
+		overflow: hidden;
+		.swiper-container {
+			height: 100%;
+
+		}
+
+		img {
+			height: 100%;
+		}
+    }
+}
+
+
+.tabs-section-page {
+	@media (min-width:$mobile-min) and (max-width: $tablet-max) {
+		margin: 250px 0 0  !important;
+    }
+}
+
+
+
+.rotate-tab-indicator {
+	transform: rotate(180deg);
+}
+
+.not-found {
+	min-height: 80vh;
+	padding: 50px 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
