--- a/sass/base/elements/_buttons.scss
+++ b/sass/base/elements/_buttons.scss
@@ -47,4 +47,8 @@ input[type="submit"] {
 		box-shadow: inset 150px 0 0 0 #fff;
 		color: $color__primary-blue !important;
 	}
+
+	@media (min-width: $mobile-min) and (max-width: $tablet-max) {
+		display: none;
+	}
 }
