--- a/sass/base/pages/_apartment-single.scss
+++ b/sass/base/pages/_apartment-single.scss
@@ -6,6 +6,10 @@
     align-items: center;
     position: relative;
 
+	@media (min-width: 320px) and (max-width: 480px) {
+		height: 80vh;
+	}
+
     h1 {
         text-transform: uppercase;
         font-size: 70px;
@@ -13,6 +17,10 @@
         font-weight: 600;
         position: relative;
         z-index: 2;
+		@media (min-width: 320px) and (max-width: 480px) {
+			font-size: 30px;
+			text-align: center;
+		}
     }
     
     .overlay{
@@ -26,6 +34,13 @@
 
 .apartment-description {
     margin: 120px 245px;
+	@media (min-width: 320px) and (max-width: 480px) {
+		margin: 50px 20px;
+	}
+}
+
+.swiper-container-apartment-single {
+	height: 100%;
 }
 
 .apartment-slider-image {
