--- a/sass/base/pages/_contact.scss
+++ b/sass/base/pages/_contact.scss
@@ -8,7 +8,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%,-50%);
-        @media (min-width: 320px) and (max-width: 480px) {
+        @media (min-width: $mobile-min) and (max-width: $tablet-medium) {
             margin: 0;
         }
     }
@@ -17,19 +17,23 @@
 .contact-info {
     display: flex;
     justify-content: space-around;
-    @media (min-width: 320px) and (max-width: 480px) {
+    @media (min-width: $mobile-min) and (max-width: $mobile-max) {
         flex-wrap: wrap;
         margin: 0 20px;
     }
+    @media (min-width: $tablet-min) and (max-width: $tablet-medium) {
+        flex-wrap: wrap;
+        margin: 0 100px;
+    }
     h3 {
         font-size: 30px;
-        @media (min-width: 320px) and (max-width: 480px) {
+        @media (min-width: $mobile-min) and (max-width: $tablet-medium) {
             margin: 0;
         }
     }
 
     &__single {
-        @media (min-width: 320px) and (max-width: 480px) {
+        @media (min-width: $mobile-min) and (max-width: $tablet-medium) {
             width: 100%;
             margin-bottom: 50px;
         }
@@ -44,7 +48,7 @@
             font-weight: 400;
             font-size: 14px;
             margin-left: 5px;
-            @media (min-width: 320px) and (max-width: 480px) {
+            @media (min-width: $mobile-min) and (max-width: $tablet-medium) {
                 font-size: 10px;
             }
             a {
@@ -57,20 +61,20 @@
 .form {
     width: 750px;
     margin: 150px auto;
-    @media (min-width: 320px) and (max-width: 480px) {
+    @media (min-width: $mobile-min) and (max-width: $tablet-medium) {
         width: 100%;
         margin: 30px auto;
     }
     .wpforms-submit-container {
         text-align: right;
         width: 100%;
-        @media (min-width: 320px) and (max-width: 480px) {
+        @media (min-width: $mobile-min) and (max-width: $tablet-medium) {
             margin: 0 20px !important;
         }
     }
 
     .wpforms-field-container {
-        @media (min-width: 320px) and (max-width: 480px) {
+        @media (min-width: $mobile-min) and (max-width: $tablet-medium) {
             margin: 0 20px !important;
         }
     }
@@ -115,13 +119,13 @@
 
 .map {
     margin: 125px 0;
-    @media (min-width: 320px) and (max-width: 480px) {
+    @media (min-width: $mobile-min) and (max-width: $tablet-medium) {
         margin: 30px 0;
         height: 300px;
     }
     img {
         width: 100%;
-        @media (min-width: 320px) and (max-width: 480px) {
+        @media (min-width: $mobile-min) and (max-width: $tablet-medium) {
             height: 100%;
             object-fit: cover;
         }
