--- a/sass/base/pages/_restaurant.scss
+++ b/sass/base/pages/_restaurant.scss
@@ -1,11 +1,11 @@
 #about,
 #restaurant-page {
-    
+     
     .tabs-image {
         width: 100%;
         height: 100%;
         object-fit: fill;
-        @media (min-width: 320px) and (max-width: 480px) {
+        @media (min-width: $mobile-min) and (max-width: $tablet-max) {
             object-fit: cover;
         }
     }
@@ -14,9 +14,15 @@
         grid-template-columns: 40% 60%;
         width: 100%;
         margin: 0 80px;
-        @media (min-width: 320px) and (max-width: 480px) {
+        @media (min-width: $mobile-min) and (max-width: $tablet-max) {
             grid-template-columns: 1fr;
             margin: 0;
         }
     }
+}
+
+#restaurant-page {
+	@media (min-width: $mobile-min) and (max-width: $tablet-max) {
+		margin: 150px 0 !important;
+	}
 }
