--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -9,15 +9,19 @@
 	z-index: 10;
 	padding: 20px;
 	transition: 250ms;
-	@media (min-width: 320px) and (max-width: 480px) {
+	@media (min-width: $mobile-min) and (max-width: $mobile-max) {
 		padding: 5px;                               
 	}
+	@media (min-width: $tablet-min) and (max-width: $tablet-max) {
+		padding: 10px;                               
+	}
+
 }
 
 .burger {
 	position: relative;
 	z-index: 15;
-	@media (min-width: 320px) and (max-width: 480px) {
+	@media (min-width: $mobile-min) and (max-width: $mobile-max) {
 		width: 50px;
 	}
 	img {
@@ -32,9 +36,13 @@
 	text-align: center;
 	.custom-logo-link {
 		margin-left: 250px;
-		@media (min-width: 320px) and (max-width: 480px) {
+		@media (min-width: $mobile-min) and (max-width: $mobile-max) {
 			margin-left: 0;
 			width: 170px;                         
+		}
+		@media (min-width: $tablet-min) and (max-width: $tablet-max) {
+			margin-left: 0;
+			width: 250px;                               
 		}
 	}
 }
@@ -47,13 +55,13 @@
 	svg {
 		margin-right: 15px;
 		fill: #fff;
-		@media (min-width: 320px) and (max-width: 480px) {
+		@media (min-width: $mobile-min) and (max-width: $mobile-max) {
 			display: none;                              
 		}
 	}
 
 	.caravella-btn-primary {
-		@media (min-width: 320px) and (max-width: 480px) {
+		@media (min-width: $mobile-min) and (max-width: $mobile-max) {
 			display: none;                   
 		}
 	}
@@ -67,7 +75,7 @@
 		padding: 0;
 		list-style-type: none;
 		background: none;
-		@media (min-width: 320px) and (max-width: 480px) {
+		@media (min-width: $mobile-min) and (max-width: $mobile-max) {
 			margin: 0 10px;                           
 		}
 		select {
@@ -77,7 +85,6 @@
 			text-transform: uppercase;
 			font-size: 18px;
 			outline: none;
-			
 		}
 	}
 }
@@ -94,7 +101,7 @@
 	display: grid;
 	grid-template-columns: 1fr 2fr;
 	align-items: center;
-	@media (min-width: 320px) and (max-width: 480px) {
+	@media (min-width: $mobile-min) and (max-width: $tablet-max) {
 		grid-template-columns: 1fr;
 		align-items: baseline;
 	}
@@ -103,8 +110,13 @@
 		height: 500px;
 		margin-left: auto;
 		object-fit: cover;
-		@media (min-width: 320px) and (max-width: 480px) {
+		@media (min-width: $mobile-min) and (max-width: $mobile-max) {
 			display: none;
+		}
+		@media (min-width: $tablet-min) and (max-width: $tablet-max) {
+			width: 200px;
+			margin: 0 auto;
+			height: 80%;
 		}
 	}
 }
@@ -119,31 +131,33 @@
 	box-shadow: inset 0 0 0 0 #fff;
 	cursor: pointer;
 	transition: ease-in-out 150ms;
+	@media (min-width: $mobile-min) and (max-width: $mobile-max) {
+		width: 50px;
+		height: 50px;
+	}
 	&:hover {
 		box-shadow: inset 70px 0 0 0 #fff;
-		// svg {
+		line {
+			stroke: $color__primary-blue !important;
+		}
+		@media (min-width: $mobile-min) and (max-width: $tablet-medium) {
+			box-shadow: inset 0 0 0 0 #fff;
 			line {
-				stroke: $color__primary-blue !important;
-			}
-		// }
+				stroke: #fff !important;
+			}                  
+		}
 	}
-}
-
-#burger-menu-close {
-	transform: translateY(-1300px);
-	opacity: 0;
-	display: none;
 }
 
 .main-navigation {
 	margin-top: 150px;
 	margin-left: 145px;
-	@media (min-width: 320px) and (max-width: 480px) {
+	@media (min-width: $mobile-min) and (max-width: $tablet-max) {
 		margin-left: 20px;
 	}
 	.menu {
 		list-style-type: none;
-		@media (min-width: 320px) and (max-width: 480px) {
+		@media (min-width: $mobile-min) and (max-width: $tablet-max) {
 			padding: 0;
 			margin: 0;
 		}
@@ -151,7 +165,7 @@
 			margin-bottom: 50px;
 			text-transform: uppercase;
 			font-size: 35px;
-			@media (min-width: 320px) and (max-width: 480px) {
+			@media (min-width: $mobile-min) and (max-width: $mobile-max) {
 				font-size: 24px;
 				margin-bottom: 20px;
 			}
